Deluge 0.5.7 (xx November 2007)
  * Blocklist plugin will now display errors, instead of just crashing on a bad
  list

Deluge 0.5.6.2 (31 October 2007)
  * Set default piece size to 256-KiB in TorrentCreator plugin and add 2048KiB
  as a size option.
  * Fix a bug in Debian package that caused the UI to completely freeze when a 
  torrent finished
  * Find and fix another shutdown bug that mostly Gutsy users were incountering
  * Fix a couple of WebUI bugs, including the "index" page erroring out

Deluge 0.5.6.1 (28 October 2007)
  * Fix invalid handle error
  * Fix shutdown hang

Deluge 0.5.6 (24 October 2007)
  * Web Interface Plugin
  * Hopefully fix "losing data" and having to re-download parts (for real this time :p)
  * Use new full allocation method which does not create files until one of its
  pieces is downloaded
  * Tray lock password is no longer stored in plain text
  * Update the Scheduler plugin and fix a bunch of bugs on it
  * Double-clicking on a torrent opens up its containing folder
  * Fix SpeedLimiter plugin when setting upload limits
  * Fix MoveTorrent plugin when moving actively downloading torrents
  * Pause torrents while importing blocklist and resume them when finished
  * Remove TorrentPieces and disable its use
  * A whole bunch of stuff for Win32
  * Add private flag to TorrentCreator plugin
  * Use SVG for internal logo usage (except on Win32)
  * Use theme for tray icon instead of hard-coded 
  * Properly release port on shutdown
  * TorrentFiles plugin now has progress bars
  * Removing torrent files no longer deletes files that werent part of the torrent
  * New max half-open connections setting to deal with cheap/broken routers
  * Inherit UPnP fixes from libtorrent
  * Use threading for everything, instead of spawnning

Deluge 0.5.5 (09 September 2007)
  * Editing a torrent's tracker list is now persistent between sessions
  * Persistence between sessions for Speed Limiter, Web Seed and Desired Ratio 
  plugins