@@ -121,6 +121,7 @@ class PreferencesDlg:
             self.glade.get_widget("txt_web_proxy_username").set_text(self.preferences.get("web_proxy_username"))
             self.glade.get_widget("txt_web_proxy_password").set_text(self.preferences.get("web_proxy_password"))
             self.glade.get_widget("download_path_button").set_filename(self.preferences.get("default_download_path"))
+            self.glade.get_widget("torrent_path_button").set_filename(self.preferences.get("default_torrent_path"))
             self.glade.get_widget("chk_enable_files_dialog").set_active(self.preferences.get("enable_files_dialog"))
             self.glade.get_widget("chk_prioritize_first_last_pieces").set_active(self.preferences.get("prioritize_first_last_pieces"))
             self.glade.get_widget("radio_compact_allocation").set_active(self.preferences.get("use_compact_storage"))
@@ -238,6 +239,7 @@ class PreferencesDlg:
         self.preferences.set("peer_proxy_hostname", self.glade.get_widget("txt_peer_proxy_hostname").get_text())
         self.preferences.set("use_default_dir", self.glade.get_widget("radio_save_all_to").get_active())
         self.preferences.set("default_download_path", self.glade.get_widget("download_path_button").get_filename())
+        self.preferences.set("default_torrent_path", self.glade.get_widget("torrent_path_button").get_filename())
         self.preferences.set("enable_files_dialog", self.glade.get_widget("chk_enable_files_dialog").get_active())
         self.preferences.set("prioritize_first_last_pieces", self.glade.get_widget("chk_prioritize_first_last_pieces").get_active())
         self.preferences.set("auto_end_seeding", self.glade.get_widget("chk_autoseed").get_active())
