@@ -37,8 +37,10 @@
 import cPickle as pickle
 import common
 import os.path
+import xdg
 
-DEFAULT_PREFS = {
+if common.windows_check():
+    DEFAULT_PREFS = {
     "enabled_plugins" : "Torrent Files:Torrent Peers",
     "file_manager" : common.FileManager.xdg,
     "open_folder_stock" : True,
@@ -50,6 +52,113 @@ DEFAULT_PREFS = {
     "enable_files_dialog" : False,
     "queue_above_completed" : False,
     "clear_max_ratio_torrents" : False,
+    "default_torrent_path" : os.path.join(os.path.expanduser("~"), 'deluge', 'torrentfiles'),
+    "default_download_path" : os.path.expanduser("~"),
+    "open_torrent_dialog_path" : os.path.expanduser("~"),
+    "choose_directory_dialog_path": os.path.expanduser("~"),
+    "enable_dht" : True,
+    "enable_system_tray" : True,
+    "enabled_plugins" : "Torrent Files:Torrent Peers",
+    "encin_state" : common.EncState.enabled,
+    "encout_state" : common.EncState.enabled,
+    "enclevel_type" : common.EncLevel.both,
+    "end_seed_ratio" : 0.0,
+    "gui_update_interval" : 1.0,
+    "listen_on" : [6881,6889],
+    "lock_tray" : False,
+    "max_half_open" : 8,
+    "max_active_torrents" : 8,
+    "max_connections_global" : 200,
+    "max_connections_per_torrent" : -1,
+    "max_download_speed" : -1,
+    "max_download_speed_bps": -1,
+    "max_upload_slots_global" : 4,
+    "max_upload_slots_per_torrent" : -1,
+    "max_upload_speed" : -1,
+    "max_upload_speed_bps" : -1,
+    "pref_rc4" : True,
+    "prioritize_first_last_pieces" : False,
+    "web_proxy_type" : common.ProxyType.none,
+    "peer_proxy_type" : common.ProxyType.none,
+    "dht_proxy_type" : common.ProxyType.none,
+    "tracker_proxy_type" : common.ProxyType.none,
+    "peer_proxy" : False,
+    "tracker_proxy" : False,
+    "dht_proxy" : False,
+    "peer_proxy_hostname" : "",
+    "peer_proxy_username" : "",
+    "peer_proxy_password" : "",
+    "peer_proxy_port": 8080,
+    "dht_proxy_hostname" : "",
+    "dht_proxy_username" : "",
+    "dht_proxy_password" : "",
+    "dht_proxy_port": 8080,
+    "web_proxy_hostname" : "",
+    "web_proxy_username" : "",
+    "web_proxy_password" : "",
+    "web_proxy_port": 8080,
+    "tracker_proxy_hostname" : "",
+    "tracker_proxy_username" : "",
+    "tracker_proxy_password" : "",
+    "tracker_proxy_port": 8080,
+    "queue_seeds_to_bottom" : False,
+    "random_port" : False,
+    "show_availability" : True,
+    "show_dl" : True,
+    "show_eta" : True,
+    "show_infopane" : True,
+    "show_peers" : True,
+    "show_seeders" : True,
+    "show_share" : True,
+    "show_size" : True,
+    "show_status" : True,
+    "show_toolbar" : True,
+    "show_ul" : True,
+    "start_in_tray" : False,
+    "tray_downloadspeedlist" : [5.0, 10.0, 30.0, 80.0, 300.0],
+    "tray_passwd" : "",
+    "tray_uploadspeedlist" : [5.0, 10.0, 30.0, 80.0, 300.0],
+    "use_compact_storage" : False,
+    "use_default_dir" : False,
+    "use_natpmp" : False,
+    "use_upnp" : True,
+    "use_utpex" : True,
+    "new_releases" : True,
+    "window_height" : 480,
+    "window_maximized" : False,
+    "window_pane_position" : -1,
+    "window_width" : 640,
+    "window_x_pos" : 0,
+    "window_y_pos" : 0,
+    "availability_width" : 50,
+    "queue_width" : 40,
+    "name_width" : 175,
+    "dl_width" : 110,
+    "ul_width" : 110,
+    "eta_width" : 65,
+    "peer_width" : 85,
+    "seed_width" : 85,
+    "share_width" : 60,
+    "size_width" : 71,
+    "status_width" : 150,
+    "filename_f_width" : 220,
+    "size_f_width" : 90,
+    "priority_f_width" : 140
+}
+else:
+    DEFAULT_PREFS = {
+    "enabled_plugins" : "Torrent Files:Torrent Peers",
+    "file_manager" : common.FileManager.xdg,
+    "open_folder_stock" : True,
+    "open_folder_location": "",
+    "send_info" : True,
+    "auto_end_seeding" : False,
+    "auto_seed_ratio" : 0,
+    "close_to_tray" : False,
+    "enable_files_dialog" : False,
+    "queue_above_completed" : False,
+    "clear_max_ratio_torrents" : False,
+    "default_torrent_path" : os.path.join(xdg.BaseDirectory.save_config_path('deluge'), 'torrentfiles'),
     "default_download_path" : os.path.expanduser("~"),
     "open_torrent_dialog_path" : os.path.expanduser("~"),
     "choose_directory_dialog_path": os.path.expanduser("~"),
